openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: noergler
spec:
  selector:
    app: noergler
  ports:
    - port: 8080
      targetPort: 8080
