openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nitpick
spec:
  to:
    kind: Service
    name: nitpick
  port:
    targetPort: 8080
  tls:
    termination: edge
